@@ -13,25 +13,6 @@ java {
     }
 }
 
-sourceSets {
-    integrationTest { // 통합 테스트 환경 정의
-        java {
-            srcDir 'src/integrationTest/java'
-        }
-        resources {
-            srcDir 'src/integrationTest/resources'
-        }
-        compileClasspath += sourceSets.main.output + sourceSets.test.output
-        runtimeClasspath += sourceSets.main.output + sourceSets.test.output
-    }
-}
-
-configurations {
-    integrationTestImplementation.extendsFrom testImplementation
-    integrationTestRuntimeOnly.extendsFrom testRuntimeOnly
-}
-
-
 repositories {
     mavenCentral()
 }
@@ -49,27 +30,29 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test' // Spring Boot 테스트 의존성
 }
 
-tasks.withType(JavaExec).configureEach {
-    jvmArgs = ["-Xms512m", "-Xmx1024m"]
+test {
+    useJUnitPlatform()
 }
 
-//tasks.withType(JavaCompile).configureEach {
-//    options.compilerArgs << "-parameters"
-//}
+sourceSets {
+    integrationTest {
+        java.srcDir "$projectDir/src/integrationTest/java"
+        resources.srcDir "$projectDir/src/integrationTest/resources"
+        compileClasspath += main.output + test.output
+        runtimeClasspath += main.output + test.output
+    }
+}
 
-tasks.withType(Test).configureEach {
-    jvmArgs += [
-            "-XX:+EnableDynamicAgentLoading", // 동적 에이전트 로드 허용
-            "-Djdk.instrument.traceUsage=true" // 에이전트 로드 관련 정보 출력
-    ]
+configurations {
+    integrationTestImplementation.extendsFrom implementation
+    integrationTestImplementation.extendsFrom testImplementation
+    integrationTestRuntimeOnly.extendsFrom testRuntimeOnly
 }
 
 tasks.register('integrationTest', Test) {
-    description = "Runs the integration tests."
-    group = "verification"
     testClassesDirs = sourceSets.integrationTest.output.classesDirs
     classpath = sourceSets.integrationTest.runtimeClasspath
-    shouldRunAfter test
+    useJUnitPlatform()
 }
 
 check.dependsOn integrationTest
